force-app/main/default/objects/Choix_Offre__c/Choix_Offre__c.object-meta.xml
<CustomObject>
    <label>Choix Offre</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Nom de Choix Offre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Choix Offres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>