force-app/main/default/objects/Choix_Offre__c/fields/ChoixOffrePousseeLinky__c.field-meta.xml
<CustomField>
    <fullName>ChoixOffrePousseeLinky__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Choix Offre Poussée Linky</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Energie__c</field>
            <operation>equals</operation>
            <valueField>Product2.vlocity_cmt__Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Choix Offres (Choix Offre Poussée Linky)</relationshipLabel>
    <relationshipName>Choix_Offres2</relationshipName>
    <type>Lookup</type>
</CustomField>