force-app/main/default/objects/Choix_Offre__c/fields/ChoixOffrerepli__c.field-meta.xml
<CustomField>
    <fullName>ChoixOffrerepli__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Choix Offre de repli</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Offre repli</relationshipLabel>
    <relationshipName>Choix_Offres1</relationshipName>
    <type>Lookup</type>
</CustomField>