force-app/main/default/objects/Choix_Offre__c/fields/Compteur_Linky__c.field-meta.xml
<CustomField>
    <fullName>Compteur_Linky__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compteur Linky</label>
    <type>Checkbox</type>
</CustomField>