force-app/main/default/objects/Choix_Offre__c/fields/Contexte_de_souscription__c.field-meta.xml
<CustomField>
    <fullName>Contexte_de_souscription__c</fullName>
    <label>Contexte de souscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHO</fullName>
            </value>
            <value>
                <fullName>PP-EM</fullName>
            </value>
            <value>
                <fullName>PP-CHF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>