force-app/main/default/objects/Choix_Offre__c/fields/debut_Validite_Offre__c.field-meta.xml
<CustomField>
    <fullName>debut_Validite_Offre__c</fullName>
    <label>Début Validité Offre</label>
    <type>Date</type>
</CustomField>