force-app/main/default/objects/Choix_Offre__c/fields/Energie__c.field-meta.xml
<CustomField>
    <fullName>Energie__c</fullName>
    <label>Energie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elec</fullName>
            </value>
            <value>
                <fullName>Gaz</fullName>
            </value>
            <value>
                <fullName>Duo</fullName>
                <label>Dual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>