force-app/main/default/objects/Choix_Offre__c/fields/Offre_de_repli__c.field-meta.xml
<CustomField>
    <fullName>Offre_de_repli__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offre de repli</label>
    <type>Checkbox</type>
</CustomField>