force-app/main/default/objects/Choix_Offre__c/fields/Offre_Poussee__c.field-meta.xml
<CustomField>
    <fullName>Offre_Poussee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offre Poussée</label>
    <type>Checkbox</type>
</CustomField>