force-app/main/default/objects/Choix_Offre__c/fields/OffrePousse__c.field-meta.xml
<CustomField>
    <fullName>OffrePousse__c</fullName>
    <label>Offre poussée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>familleProduitSmile</valueSetName>
    </valueSet>
</CustomField>