force-app/main/default/objects/Choix_Offre__c/fields/OffrePousseLinky__c.field-meta.xml
<CustomField>
    <fullName>OffrePousseLinky__c</fullName>
    <label>Offre poussée linky</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>familleProduitSmile</valueSetName>
    </valueSet>
</CustomField>