force-app/main/default/objects/Choix_Offre__c/fields/offreRepli__c.field-meta.xml
<CustomField>
    <fullName>offreRepli__c</fullName>
    <label>offre repli</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>familleProduitSmile</valueSetName>
    </valueSet>
</CustomField>