force-app/main/default/objects/Choix_Offre__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OffrePousse__c</columns>
    <columns>OffrePousseLinky__c</columns>
    <columns>offreRepli__c</columns>
    <columns>Energie__c</columns>
    <columns>Actif__c</columns>
    <columns>Contexte_de_souscription__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actif__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tout</label>
</ListView>