force-app/main/default/objects/Choix_Offre__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Actif__c</columns>
    <columns>Contexte_de_souscription__c</columns>
    <columns>Energie__c</columns>
    <columns>OffrePousse__c</columns>
    <columns>OffrePousseLinky__c</columns>
    <columns>offreRepli__c</columns>
    <columns>debut_Validite_Offre__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actif__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tous les choix d&apos;offre</label>
</ListView>